# fast_io

./: .clang-format  CMakeLists.txt  license-zhCN.txt  license.txt  readme.md
benchmark/0001.refterm/: filebuf_file.cc  fpipe.cc  fstream.cc  iostream.cc  out_buf.cc  stdio.cc  stdio_hack.cc
benchmark/0002.file_io_tsc/: c_file_unlocked_tsc.cc  iobuf_file_tsc.cc  stdio_tsc.cc
benchmark/0003.file_io_hex/: fstream.cc  fstream_locale.cc  iobuf_file.cc  iobuf_file_addrvw.cc  iobuf_file_l10n.cc
benchmark/0004.file_io_floating/: charconv_general.cc  charconv_general_float.cc  charconv_hexfloat.cc  charconv_hexfloat_float.cc  decimal.cc  decimal_float.cc  decimal_l10n.cc  general.cc  general_float.cc  general_l10n.cc  hexfloat.cc  hexfloat_float.cc
benchmark/0005.time/: fast_io.cc  glibc_nl_langinfo.cc  iso8601.cc  put_time.cc
benchmark/0007.concat/: concat_cstring.cc  concat_hstring.cc  concat_qstring.cc  concat_string.cc  concat_vs_format.cc  to_hstring.cc
benchmark/0009.concatstring/: concat.cc  format.cc  stringstream.cc  tostring.cc
benchmark/0010.line/: contiguous_line_scanner.cc  getline.cc  line_get.cc  line_get_fbf.cc  line_scanner.cc  random_data.cc  scan_qstring.cc  scan_qstring_u16utf8.cc  (+3 more)
examples/: .test_prop.toml  CMakeLists.txt
examples/0005.sha/: CMakeLists.txt  compile_time.cc  crc32.cc  cryptopp_md5.cc  cryptopp_sha256.cc  cryptopp_sha512.cc  md5.cc  native_hash_file.cc  ossl_evp.cc  ossl_md5.cc  ossl_sha1.cc  ossl_sha256.cc  ossl_sha512.cc  sha1.cc  sha256.cc  sha512.cc
include/: fast_io_core.h  fast_io_device.h
tests/: CMakeLists.txt
(+1149 files in other folders)
