add_executable(compile_time compile_time.cc)
add_test(compile_timetest compile_time)
add_executable(crc32 crc32.cc)
add_test(crc32test crc32)
add_executable(md5 md5.cc)
add_test(md5test md5)
add_executable(native_hash_file native_hash_file.cc)
add_test(native_hash_filetest native_hash_file)
add_executable(sha1 sha1.cc)
add_test(sha1test sha1)
add_executable(sha256 sha256.cc)
add_test(sha256test sha256)
add_executable(sha512 sha512.cc)
add_test(sha512test sha512)
